# mcp-statcan

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CLAUDE.txt  CONTRIBUTING.md  IMPLEMENTATIONS.md  JupyterNB.ipynb  LICENSE  README.md  bump-version.sh  cleanup_resources.sh  index.html  prompt.md  pyproject.toml  render.yaml  server.json  statcan_mcp_server.py
.github/workflows/: bump-version.yml  publish-mcp-registry.yml  update-announcement.yml  update-landing-page.yml
cleaned_resources/: data_coordinate_3610043402_1.1.1-2.1.1.json  metadata_cube_1410028701.json  metadata_vector_v111955426.json  metadata_vector_v1175552674.json
cleaned_resources/metadata_demo/: employment_v111955426.json  visualization_data.json
docs/: implementation_status.md  integrations.md  quick_start.md
docs/examples/: metadata_enhancement_demo.md
docs/references/: api_methods.md  code_sets.md  data_structures.md
docs/references/api_sections/: getAllCubesList.txt  getAllCubesListLite.txt  getBulkVectorDataByRange.txt  getChangedCubeList.txt  getChangedSeriesDataFromCubePidCoord.txt  getChangedSeriesDataFromVector.txt  getChangedSeriesList.txt  getCodeSets.txt  getCubeMetadata.txt  getCubeMetadata_examples.txt  getDataFromCubePidCoordAndLatestNPeriods.txt  getDataFromVectorByReferencePeriodRange.txt  getDataFromVectorsAndLatestNPeriods.txt  getDataFromVectorsAndLatestNPeriods_examples.txt  getFullTableDownloadCSV.txt  getFullTableDownloadSDMX.txt  getSeriesInfoFromCubePidCoord.txt  getSeriesInfoFromVector.txt  getSeriesInfoFromVector_examples.txt
docs/references/code_sets/: README.md  all_code_sets.json  classificationType_codes.json  frequency_codes.json  scalar_codes.json  securityLevel_codes.json  status_codes.json  subject_codes.json  survey_codes.json  symbol_codes.json  terminated_codes.json  uom_codes.json  (+1 more)
examples/: demo_metadata.py  direct_api_test.py
public/: index.html
scripts/: cache_test.py  direct_api_test.py  format_test.py  run_server.py  test_api.py  test_cube_data.py  test_integrations.py  test_mcp_server.py  vector_test.py
src/: __init__.py  __main__.py  auth.py  cache.py  config.py  landing.py  prompts.py  server.py  wds_client.py
src/api/: __init__.py  client.py  composite_tools.py  cube_tools.py  metadata_tools.py  sdmx_tools.py  vector_tools.py
src/cli/: README.md  main.py  output.py
src/db/: __init__.py  connection.py  queries.py  schema.py
src/integrations/: __init__.py  data_exploration.py  data_storage.py  deep_research.py  integrations.py  sql_analyzer.py  vectorize.py
src/models/: __init__.py  api_models.py  db_models.py  sdmx_models.py
src/resources/: all_code_sets.json  data_coordinate_1810000401_1.1.1-2.2.0.0-3.1.json  enhanced_metadata_example.json  enhanced_vector_data.json  frequency_codes.json  metadata_cube_1810000401.json  metadata_cube_3310027501.json  metadata_cube_3410010501.json  metadata_cube_3610043402.json  metadata_vector_v21581063.json  metadata_vector_v41690973.json  scalar_factors.json  uom_lookup.json
src/tools/: citation.py  storage.py
src/util/: __init__.py  cache.py  coordinate.py  logger.py  registry.py  sdmx_json.py  sql_helpers.py  truncation.py
tests/: __init__.py  test_api_connection.py  test_or_fix.py  test_sdmx_json.py  test_truncation.py  test_wds_client.py
tests/api/: api_connection_steps.md  api_connection_steps.py  array_format_test.py  direct_test.py  format_test.py  full_guide.txt  proper_format_test.py  test_api.py  vector_test.py
tests/debug/: test_data_links.py  test_formatted_links.py
tests/integration/: test_cube_data.py  test_integrations.py  test_mcp_server.py
tests/metadata/: metadata_test.py
(+16 files in other folders)
