[build-system]
# Specifies the build backend and its requirements (standard for modern Python packaging)
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
# Core project metadata
name = "statcan-mcp-server"
version = "0.1.4"
description = "MCP Server for interacting with Statistics Canada Web Data Services API"
readme = "README.md" 
license = "MIT" 
authors = [
    { name = "Aryan Jhaveri" }, 
]
requires-python = ">=3.10" 

# Core dependencies required for the server to run
dependencies = [
    "mcp>=1.3.0,<2",
    "httpx>=0.25.0",  
    "pydantic>=2.0.0" 
]

[project.urls]
Homepage = "https://github.com/Aryan-Jhaveri/mcp-statcan"
Repository = "https://github.com/Aryan-Jhaveri/mcp-statcan"
GitHub = "https://github.com/Aryan-Jhaveri"
LinkedIn = "https://www.linkedin.com/in/aryanjhaveri/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.scripts]
statcan-mcp-server = "src.server:main"

